# explo_planner

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: exploration_params.yaml  targets.yaml
doc/: exploitation_plan.md
include/explo_planner/: candidate_generator.hpp  coordination.hpp  cost_grid.hpp  exploration_planner_node.hpp  failed_goal_blacklist.hpp  fov_evaluator.hpp  map_cache.hpp  metrics_logger.hpp  plan_map_query.hpp  planner_util.hpp  scoring.hpp  target_queue.hpp  vantage_planner.hpp
launch/: exploitation_experiment.launch.py  exploration_experiment.launch.py  multi_robot_exploration.launch.py
scripts/: eval_exp6.py  eval_exp7.py  exp5_retry_s4_s5.csv  exp5_smoke_pose.csv  exp5_start_poses.csv  exp6_start_configs.csv  exp7_start_configs.csv  merge_exp7_csvs.py  plot_exp5_curves.py  plot_exp6_bars.py  plot_exp7.py  run_exp5_batch.sh  run_exp6_batch.sh  run_exp7_batch.sh  test_all_worlds.sh
src/: candidate_generator.cpp  coordination.cpp  cost_grid.cpp  explo_planner_node.cpp  exploration_planner_comp_node.cpp  exploration_planner_main.cpp  exploration_planner_node.cpp  failed_goal_blacklist.cpp  fov_evaluator.cpp  map_cache.cpp  metrics_logger.cpp  plan_map_query.cpp  planner_util.cpp  scoring.cpp  target_queue.cpp  target_scheduler_node.cpp  vantage_planner.cpp
test/: test_candidate_generator.cpp  test_coordination.cpp  test_cost_grid.cpp  test_failed_goal_blacklist.cpp  test_fov_evaluator.cpp  test_plan_map_query.cpp  test_planner_util.cpp  test_scoring.cpp  test_target_queue.cpp  test_vantage_planner.cpp
